name:                mqtt
synopsis:            An MQTT protocol implementation (client and server).
description:
  This project aims to supply a rock-solid MQTT implementation suitable for
  production use.
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Lars Petersen
maintainer:          info@lars-petersen.net
category:            Network, IoT
homepage:            https://github.com/lpeterse/haskell-mqtt
bug-reports:         https://github.com/lpeterse/haskell-mqtt/issues
extra-source-files:  README.md
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: git://github.com/lpeterse/haskell-mqtt.git

library
  ghc-options:         -Wall
  exposed-modules:     Network.Stack.Server,
                       Network.MQTT,
                       Network.MQTT.Authentication,
                       Network.MQTT.Client,
                       Network.MQTT.Message,
                       Network.MQTT.RetainedMessages,
                       Network.MQTT.Broker,
                       Network.MQTT.Topic,
                       Network.MQTT.RoutingTree,
                       Network.MQTT.Server,
                       Network.MQTT.Session,
                       Network.MQTT.QualityOfService
  build-depends:       async,
                       attoparsec,
                       base >=4.8 && <5,
                       bytestring,
                       binary,
                       exceptions,
                       text,
                       containers,
                       socket,
                       tls,
                       network-uri,
                       case-insensitive,
                       x509,
                       x509-validation,
                       random,
                       websockets,
                       hslogger
  hs-source-dirs:      src
  default-language:    Haskell2010

benchmark topic-matching
  type:             exitcode-stdio-1.0
  ghc-options:      -Wall -O2
  default-language: Haskell2010
  hs-source-dirs:   benchmark
  main-is:          TopicMatching.hs
  build-depends:
    base,
    bytestring,
    binary,
    criterion,
    mqtt,
    text

benchmark binary
  type:             exitcode-stdio-1.0
  ghc-options:      -Wall -threaded
  default-language: Haskell2010
  hs-source-dirs:   benchmark
  main-is:          Binary.hs
  build-depends:
    base,
    bytestring,
    binary,
    criterion,
    mqtt,
    text

test-suite test
  type:
    exitcode-stdio-1.0
  default-language:
    Haskell2010
  ghc-options:
    -Wall -fno-warn-orphans
  hs-source-dirs:
    test
  main-is:
    Main.hs
  other-modules:
    BrokerTest,
    EncodingTest,
    RoutingTreeTest,
    TopicTest
  build-depends:
      base >= 4.8 && < 5
    , binary
    , tasty >= 0.11
    , tasty-hunit
    , tasty-quickcheck
    , bytestring
    , attoparsec
    , exceptions
    , mqtt
    , text
    , tls
    , network-uri
    , deepseq
    , containers

-- This test suite runs with restricted maximum heap size.
-- A memory leak would result in heap usage of more than 4MB
-- leading to test failure.
test-suite retained-store-strictness-test
  type:
    exitcode-stdio-1.0
  default-language:
    Haskell2010
  ghc-options:
    -Wall -with-rtsopts=-M4m
  main-is:
    test/RetainedStoreStrictnessTest.hs
  build-depends:
    base >= 4.8 && <5,
    mqtt
